[gd_scene load_steps=7 format=3 uid="uid://c202ehhkt6j32"]

[ext_resource type="Script" uid="uid://b4qhlkk4prgp5" path="res://Enemy/Seryjny/Seryjny_Przeciwnik.gd" id="1_vjau5"]
[ext_resource type="PackedScene" uid="uid://vpbbnspwva3d" path="res://Enemy/Seryjny/Bullets/Seryjny_Bullet.tscn" id="2_qh03a"]
[ext_resource type="Texture2D" uid="uid://ba3gcgh02jbvo" path="res://Art/Emeny/pixil-frame-0 (24).png" id="3_bat1y"]
[ext_resource type="Texture2D" uid="uid://c3u1asa583sh1" path="res://Art/Emeny/minugun.png" id="4_bat1y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bat1y"]
radius = 62.0
height = 124.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bat1y"]
radius = 24.0832

[node name="Seryjny_Przeciwnik" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(0.5, 0.5)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vjau5")
Bullet = ExtResource("2_qh03a")

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_bat1y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-8, 0)
scale = Vector2(7, 7)
texture = ExtResource("3_bat1y")

[node name="Marker2D" type="Marker2D" parent="Sprite2D"]
scale = Vector2(1.20755, 1.92453)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/Marker2D"]
position = Vector2(0.946426, 2.67227)
scale = Vector2(0.542, 0.341)
texture = ExtResource("4_bat1y")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="nav_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -52.0
offset_top = -98.0
offset_right = 50.0
offset_bottom = -71.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bat1y")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="nav_timer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
